--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <link href="css/index.css" rel="stylesheet"/>
     <script src="./js/jquery.js"></script>
     <script src="./js/magiLive2d/lib/live2dcubismcore.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.3.0/browser/pixi.min.js"
-	            crossorigin="anonymous"></script>
-    <!-- <script src="./js/pixi.min.js"
-            crossorigin="anonymous"></script> -->
+<!--	<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.3.0/browser/pixi.min.js"-->
+<!--	            crossorigin="anonymous"></script>-->
+    <script src="./js/pixi.min.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/pixi-live2d-display@0.3.1/dist/cubism4.min.js" crossorigin="anonymous"></script>
 </head>
 
