--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	</div>
 	
 </div>
-<canvas class="main" id="canvas" style="position:absolute;top:0px;left:15%;width:765px;"></canvas>
+<canvas class="main" id="canvas" style="position:absolute;top:0px;left:0;height:100%;"></canvas>
 
 
 
