--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
     </div>
     <img class="main" src="./image_web\page\mypage\global_present.png" style="width:90%;">
     <img class="main" src="./image_web\page\mypage\global_announce.png" style="width:90%;">
-    <img class="main" src="./image_web\page\mypage\global_etc.png" style="width:90%;">
+    <img class="main" src="./image_web\page\mypage\global_etc.png" style="width:90%;" id="show_char2">
     <img class="main" src="./image_web\page\mypage\btn_live2d_02.png" style="width:90%;margin-top:10%;" id="change_custom">
+	<img class="main" src="./image_web\page\mypage\btn_live2d_02.png" style="width:90%;margin-top:10%;display: none;" id="change_custom2">
 </div>
 <div id="right_area"
      style="position:absolute;right:0px;width:190px;z-index: 1;display: flex;flex-direction:column;align-items:center;">
@@ -146,6 +147,7 @@
 	
 	<div style="position: absolute;left: 25%;width: 100%;">
 		<img id="favorite_set" src="./image_web\page\chara\conf_leader_off.png" style="width:50%;margin-top: 5%;">
+		<img id="favorite2_set" src="./image_web\page\chara\conf_leader_off.png" style="width:50%;margin-top: 5%;">
 		<img id="change_pose" src="./image_web\page\chara\btn_pose.png" style="width: 25%;position: absolute;right: 12%;top: -12%;">
 	</div>
 	
